# game-of-life

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/game_of_life/domain/common/value_objects/: base.py
src/game_of_life/domain/entities/: field.py  node.py
src/game_of_life/domain/services/: field.py
src/game_of_life/domain/value_objects/: node_position.py
src/game_of_life/presentation/: cli.py
src/game_of_life/presentation/cli/: cli.py
src/game_of_life/presentation/telegram/: bot.py  field_manager.py  field_manager_middleware.py
src/game_of_life/presentation/telegram/handlers/: __init__.py
src/game_of_life/presentation/telegram/handlers/field/: dialog.py
src/game_of_life/presentation/telegram/handlers/select_field/: dialog.py
src/game_of_life/presentation/telegram/states/: field.py
